server/compilers/goLiteJS/src/test/ml1/valid/break1.go
// break support
package main

func main() {
    for {
        break
    }

    for x < 10 {
        break
    }

    for i := 0; i < 10; i++ {
        break
    }
}
