server/compilers/goLiteJS/src/test/ml1/invalid/inc2.go
// inc in expression
package main

func main() {
    y = x++
}
